# pico-sdk-builder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  app.py  main.c
.github/workflows/: deploy-new-version.yml  deploy.yml  issue_handler.yml
app/: main.py  requirements.txt  restructure.py
app/static/: scripts.js  styles.css
app/templates/: index.html
docs/: using_git.md
src/: CMakeLists.txt
